# engine-m

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: constants.h  core.h  frame.h  matrix.h  quaternion.h  utils.h  vector.h  vector2d.h  vector3d.h
include/curve/: bezier.h  hermite.h
include/curves/: bezier.h  curve.h  hermite.h
include/engine-m/: frame.h  simd.h  utils.h
include/engine-m/curves/: bezier.h  curve.h  hermite.h
include/engine-m/matrix/: matrix.h
include/engine-m/quaternion/: quaternion.h
include/engine-m/splines/: spline.h
include/engine-m/vector/: vector.h  vector2d.h  vector3d.h
include/matrix/: matrix.h
include/quaternion/: quaternion.h
include/splines/: spline.h
include/vector/: vector.h  vector2d.h  vector3d.h
src/: frame.cpp  matrix.cpp  quaternion.cpp  simd.cpp  utils.cpp  vector2d.cpp  vector3d.cpp
src/curve/: bezier.cpp  hermite.cpp
src/curves/: bezier.cpp  hermite.cpp
src/kernels/: kernel_declarations.h
src/kernels/avx/: matrix_kernels.cpp
src/kernels/avx2/: matrix_kernels.cpp
src/kernels/scalar/: matrix_kernels.cpp
src/kernels/sse/: matrix_kernels.cpp
src/matrix/: matrix.cpp
src/quaternion/: quaternion.cpp
src/splines/: spline.cpp
src/vector/: vector.cpp  vector2d.cpp  vector3d.cpp
tests/: CMakeLists.txt  test_bezier.cpp  test_hermite.cpp  test_matrix.cpp  test_quaternion.cpp  test_vector.cpp  test_vector2d.cpp  test_vector3d.cpp
